--- a/demo2/package.json
+++ b/demo2/package.json
@@ -56,6 +56,7 @@
     "vue-currency-input": "^2.0.2",
     "vue-i18n": "^9.1.8",
     "vue-inline-svg": "^3.1.0",
+    "vue-location-picker": "^1.0.1",
     "vue-prism-component": "^1.2.0",
     "vue-router": "^4.0.0-0",
     "vue3-apexcharts": "^1.4.1",
@@ -71,6 +72,7 @@
     "@types/prismjs": "^1.16.2",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
     "@typescript-eslint/parser": "^4.33.0",
+    "@vue-leaflet/vue-leaflet": "^0.6.1",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-plugin-typescript": "~4.5.0",
